# py-questdb-client

./: .bumpversion.cfg  .bumpversion.toml  .gitignore  .gitmodules  .readthedocs.yml  CHANGELOG.rst  CODEOWNERS  Cargo.toml  DEV_NOTES.md  DEV_NOTES.rst  MANIFEST.in  README.md  README.rst  RELEASING.rst  TODO.rst  cln.sh  dev_requirements.txt  doc.sh  examples.manifest.yaml  install_rust.py  proj  proj.bat  proj.ps1  proj.py  pyproject.toml  requirements.txt  setup.py  srv.sh  tst.sh
.github/workflows/: build_wheels.yml  build_wheels.yml.txt  gitleaks.yml  test-macos-arm.yaml
ci/: cibuildwheel.yaml  pip_install_deps.py  pip_install_deps_wrapper.sh  run_tests_pipeline.yaml
docs/: api.rst  changelog.rst  community.rst  conf.py  conf.rst  contributing.rst  examples.rst  index.rst  installation.rst  sender.rst  troubleshooting.rst  usage.rst
egress/: Cargo.toml  build.rs
egress/src/: lib.rs
examples/: auth.py  auth_and_tls.py  basic.py  buffer.py  decimal.py  decimal_arrow.py  from_conf.py  http.py  http_transaction.py  line_sender.py  line_sender_buffer_example.py  line_sender_example.py  pandas_advanced.py  pandas_basic.py  pandas_parquet.py  qwp_udp.py  random_data.py  util.py
gdb/: commands.txt
perf/: README.md
pystr-to-str-ref/: Cargo.toml
pystr-to-utf8/: Cargo.toml  README.md  build.rs  cbindgen.toml
pystr-to-utf8/include/: pystr_to_utf8.h  pystr_to_utf8.pxd
pystr-to-utf8/src/: lib.rs  tests.rs
pystr_to_str_ref/: Cargo.toml
pystr_to_str_ref/src/: lib.rs
rpyutils/: Cargo.toml  README.md  cbindgen.toml
rpyutils/include/: rpyutils.h
rpyutils/src/: active_senders.rs  lib.rs  mpd_to_bigendian.rs  pystr_to_utf8.rs
src/questdb/: arrow_c_data_interface.pxd  column_name_vec.pxi  conf_str.h  conf_str.pxd  dataframe.md  dataframe.pxi  extra_cpython.pxd  extra_numpy.pxd  ilp.c  ilp.html  ilp.pyx  ingress.c  ingress.pyi  ingress.pyx  ingress_helper.h  ingress_helper.inc  ingress_helper.pxd  line_sender.pxd  mpdecimal_compat.h  mpdecimal_compat.pxd  pandas_helpers.md  pandas_helpers.pxi  pandas_integration.md  pandas_integration.pxi  pystr_to_utf8.pxd  rpyutils.pxd  size_t_vec.pxi
test/: benchmark.py  mock_server.py  patch_path.py  system_test.py  test.py  test_dataframe.py  test_dataframe_fuzz.py  test_dataframe_leaks.py  test_pandas_integration.py  test_pandas_integration_fuzz.py  test_pandas_leaks.py  test_tools.py
